bk_ida/gccida/g3/combinable_i3pat
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1812:4: error: expected ';' after expression
rtx v55; // [rsp+10h] [rbp-88h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1812:5: error: use of undeclared identifier 'v55'
rtx v55; // [rsp+10h] [rbp-88h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1815:4: error: expected ';' after expression
rtx x; // [rsp+28h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1815:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+28h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1817:4: error: expected ';' after expression
rtx in; // [rsp+48h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1817:5: error: use of undeclared identifier 'in'
rtx in; // [rsp+48h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1822:1: error: use of undeclared identifier 'x'
x = *loc; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1826:32: error: use of undeclared identifier 'x'
v41 = expand_field_assignment( x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1828:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v43 = (  struct rtx_def *)v41[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1854:60: error: use of undeclared identifier 'machine_mode'
if ( rtuint <= 0x34 && !ix86_hard_regno_mode_ok( rtuint, ( machine_mode)*( ( unsigned __int8 *)v45 + 2)) ) 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1863:37: error: expected expression
if ( reg_referenced_p( rtx, *( rtx *)&i3[2]) ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1889:18: error: use of undeclared identifier 'x'
rtwint = ( int *)x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1896:15: error: expected expression
v55 = *( rtx *)&rtwint[2 * ( int)v11 + 2]; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1896:1: error: use of undeclared identifier 'v55'
v55 = *( rtx *)&rtwint[2 * ( int)v11 + 2]; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1897:17: error: use of undeclared identifier 'v55'
if ( *( _WORD *)v55 != 47 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1900:32: error: use of undeclared identifier 'v55'
v36 = expand_field_assignment( v55); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1902:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v38 = (  struct rtx_def *)v36[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1903:18: error: expected expression
do_SUBST( ( rtx *)&rtwint[2 * v11 + 2], v36); 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/combine.c:1928:54: error: use of undeclared identifier 'machine_mode'
if ( v49 <= 0x34 && !ix86_hard_regno_mode_ok( v49, ( machine_mode)*( ( unsigned __int8 *)v40 + 2)) ) 
                                                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/combinable_i3pat/src/obj/combine.o] Error 1
